# MediaElch

./: .appveyor.yml  .cmake-format  .editorconfig  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MediaElch.pro  README.md  architecture.drawio  structure.txt  structure2.txt  structure3.txt
.github/workflows/: build-ubuntu-latest.yml
cmake/: warnings.cmake
data/i18n/: MediaElch_ar.ts  MediaElch_bg.ts  MediaElch_cs_CZ.ts  MediaElch_da.ts  MediaElch_de.ts  MediaElch_en.ts  MediaElch_en_US.ts  MediaElch_es_ES.ts  MediaElch_et.ts  MediaElch_fi.ts  MediaElch_fr.ts  MediaElch_he_IL.ts  MediaElch_it.ts  MediaElch_ja.ts  MediaElch_ko.ts  MediaElch_ku_IQ.ts  MediaElch_lt_LT.ts  MediaElch_my.ts  MediaElch_nl_NL.ts  MediaElch_no.ts  MediaElch_pl.ts  MediaElch_pt_BR.ts  MediaElch_pt_PT.ts  MediaElch_ru.ts  MediaElch_sv.ts  MediaElch_tr_TR.ts  MediaElch_zh_CN.ts
docs/concepts/: module-system.md  renamer.md
scripts/: build_with_iwyu.sh  run_cmake_format.sh
src/: CMakeLists.txt
src/ui/main/: AboutDialog.cpp  CMakeLists.txt  FileScannerDialog.cpp  MainWindow.cpp  Update.h
src/ui/scrapers/: CMakeLists.txt  ScraperConfigurationView.cpp  ScraperConfigurationView.h  ScraperManager.cpp  ScraperManager.h
src/ui/scrapers/movie/: AebnConfigurationView.cpp  ImdbMovieConfigurationView.cpp  ImdbMovieConfigurationView.h  TmdbMovieConfigurationView.cpp  TmdbMovieConfigurationView.h
src/ui/scrapers/tv_show/: TmdbTvConfigurationView.cpp  TmdbTvConfigurationView.h
test/: test_helpers.h
travis-ci/: configure.sh  install_dependencies.sh  package.sh
(+190 files in other folders)
